@@ -22,3 +22,4 @@ ERROR_MAX_VALUE = "max value is %d"
 ERROR_MIN_VALUE = "min value is %d"
 ERROR_EMPTY_NOT_ALLOWED = "empty values not allowed"
 ERROR_NOT_NULLABLE = "null value not allowed"
+ERROR_REGEX = "value does not match regex '%s'"
